# MTRX3760-Assignment1

./: .gitignore  README.md  run_tb3.sh  run_tb3_stack.sh  status_tb3_stack.sh  stop_tb3_stack.sh  turtlebot3_drive.cpp  turtlebot3_drive.hpp
Final Push/: CMakeLists.txt  cmd_vel_mux.cpp  frontier_watcher.cpp  package.xml  trail_marker.cpp  trail_marker_hybrid.cpp  turtlebot3_drive.cpp  turtlebot3_world.world
Maze Designer/: Book.xlsx  closed_map.xlsx  closed_maze.txt
src/MTRX3760-Assignment1/Maze Designer/: Book.xlsx  maze.txt  maze_maker.py
src/MTRX3760-Assignment1/Maze Files/: maze.world  maze_burger.world  maze_spawn.world  maze_tb3.world  maze_uc.world  maze_with_tb3.world  model.sdf  turtlebot3_maze.launch.py
src/MTRX3760-Assignment1/mazes/: enclosed_goal.txt  entry_exit_open.txt  simple_enclosed.txt  simple_floating.txt  simple_track.txt
src/MTRX3760-Assignment1/models/: NIST maze wall 120
src/MTRX3760-Assignment1/models/flat_ground/: model.config
src/MTRX3760-Assignment1/models/ground_plane/: model.config  model.sdf
src/MTRX3760-Assignment1/models/maze/: model.config  model.sdf
src/MTRX3760-Assignment1/models/nist_maze_wall_120/: model.sdf
src/MTRX3760-Assignment1/models/nist_maze_wall_120_box/: model.config  model.sdf
src/MTRX3760-Assignment1/models/tb3_gz/: model.sdf
src/MTRX3760-Assignment1/worlds/: abspath_maze.world  blank_ok.world  group_maze_with_ground.world  maze.world  maze_burger.world  maze_burger_ground.world  maze_enclosed_goal.world  maze_enclosed_goal_big.world  maze_enclosed_goal_colored.world  maze_enclosed_goal_fixed.world  maze_enclosed_goal_revert.world  maze_fixed.world  maze_gz_inline.world  maze_ign.world  maze_inlined.world  maze_inlined_ok.world  maze_local.world  maze_min.world.bak  maze_open.world  maze_open_big.world  maze_open_colored.world  maze_open_revert.world  maze_with_ground.world  maze_with_tb3.world  tb3_sanity.world  team_maze_models.world
src/maze_simulation/: CMakeLists.txt  package.xml
src/maze_simulation/config/: bridge.yaml  bridge_clean.yaml
src/maze_simulation/launch/: easy_tb3_bringup.launch.py.bak.1760333273  easy_tb3_bringup.launch.py.bak.1760333432  easy_tb3_bringup.launch.py.bak.1760333436  maze_bringup.launch.py  maze_bringup.launch.py.bak  maze_tb3_bringup.launch.py
src/maze_simulation/models/flat_ground/: model.sdf
src/maze_simulation/models/maze/: model.sdf.bak  model.sdf.orig.bak
src/maze_simulation/models/tb3_gz/: model-1_4.sdf  model.sdf  model.sdf.bak
src/maze_simulation/rviz/: maze_tb3.rviz  tb3_minimal.rviz
src/maze_simulation/worlds/: maze_open_fixed.world
src/mtrx3760_maze_nav/: CMakeLists.txt  LICENSE  package.xml
src/mtrx3760_maze_nav/config/: wall_follow.yaml
src/mtrx3760_maze_nav/include/mtrx3760_maze_nav/: config.hpp  wall_follower.hpp
src/mtrx3760_maze_nav/launch/: wall_follow.launch.py.bak
src/mtrx3760_maze_nav/rviz/: wall_follow.rviz
src/mtrx3760_maze_nav/src/: maze_navigator.cpp.bak  trajectory_node.cpp  wall_follower.cpp
src/tb3_maze_solver/: CMakeLists.txt  package.xml
src/tb3_maze_solver/include/maze_solver/: maze_solver.hpp
src/tb3_maze_solver/launch/: maze_solver_only.launch.py  maze_with_solver.launch.py
src/tb3_maze_solver/rviz/: maze_view.rviz
src/tb3_maze_solver/src/: maze_solver.cpp  maze_solver_node.cpp
src/tb3_wall_follow_cpp/: CMakeLists.txt  package.xml
src/tb3_wall_follow_cpp/include/tb3_wall_follow_cpp/: right_wall_follower.hpp
src/tb3_wall_follow_cpp/src/: right_wall_follower.cpp
src/tb3_wall_follower/: CMakeLists.txt  package.xml
src/tb3_wall_follower/launch/: wall_follower.launch.py
src/tb3_wall_follower/src/: wall_follower_node.cpp
