<?xml version="1.0"?>
<package format="3">
  <name>tb3_maze_solver</name>
  <version>0.0.1</version>
  <description>Right-wall-following maze solver for TurtleBot3 in Gazebo</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rviz2</exec_depend>
</package>
