<package format="3">
  <name>tb3_wall_follower</name>
  <version>0.0.1</version>
  <description>Right-wall follower for TurtleBot3</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
